<resources>
    <string name="app_name">Yjahz Application</string>
    <string name="email">Email.</string>
    <string name="write_your_email">write your email</string>
    <string name="password">Password</string>
    <string name="write_8_character_at_least">Write 8 character at least</string>
    <string name="forgot_the_password">Forgot the password ?</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="have_an_account">have an account ?</string>
    <string name="name">Name</string>
    <string name="write_14_character">Write 14 character</string>
    <string name="write_your_password_again">Write your password again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="write_11_numbers">Write 11 numbers</string>
    <string name="phone_number">Phone Number</string>

    <string name="server_error">Something went wrong, please try again later</string>
    <string name="no_network">There is no active network connected to your device</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="popular_now">Popular now</string>
    <string name="trending_now">Trending now</string>
    <string name="search_for_fav_food">Search for fav food ...</string>
    <string name="view_all">View all</string>

</resources>