<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.navigation.login.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/backgroundImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/meal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logo_imageview"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_76sdp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/yajhz_brand"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_250sdp"
                    android:background="@drawable/login_main_card_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backgroundImage">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="@dimen/_165sdp"
                        android:layout_height="@dimen/_68sdp"
                        app:cardBackgroundColor="@color/transparent"
                        app:cardElevation="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/inverted_card_for_login_and_signup">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:gravity="center"
                                android:text="@string/login"
                                android:textAllCaps="true"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/_24ssp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_35sdp"
                        android:text="@string/email"
                        android:textAlignment="center"
                        android:textSize="@dimen/_18ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView" />

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_22sdp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/_22sdp"
                        android:background="@drawable/edit_text_background"
                        android:elevation="@dimen/_10sdp"
                        android:hint="@string/write_your_email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="8dp"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="@color/hint_text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_tv" />


                    <TextView
                        android:id="@+id/password_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_35sdp"
                        android:layout_marginTop="13dp"
                        android:text="@string/password"
                        android:textAlignment="center"
                        android:textSize="@dimen/_18ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_22sdp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/_22sdp"
                        android:background="@drawable/edit_text_background"
                        android:elevation="@dimen/_10sdp"
                        android:hint="@string/write_8_character_at_least"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        app:boxBackgroundMode="none"
                        app:hintTextColor="@color/hint_text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_tv" />


                    <TextView
                        android:id="@+id/forget_password_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/forgot_the_password"
                        android:textColor="@color/forget_password_text_color"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
                        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />


                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_45sdp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="@dimen/_45sdp"
                        android:background="@drawable/button_background"
                        android:text="login"
                        android:textSize="@dimen/_22ssp"
                        app:backgroundTint="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forget_password_text_view" />


                    <TextView
                        android:id="@+id/do_not_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_80sdp"
                        android:layout_marginTop="32dp"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_button" />

                    <TextView
                        android:id="@+id/sign_up_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/button_color"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toEndOf="@+id/do_not_have_account"
                        app:layout_constraintTop_toBottomOf="@+id/login_button" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>