<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.navigation.home.HomeFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_header_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/home_header_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:elevation="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_image"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/back_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_85sdp"
                        android:text="@string/home"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_22ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/back_image"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/group_image_view"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="25dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/group_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/cart_image_view"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cart_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/group_image_view"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_header_container">

                <TextView
                    android:id="@+id/user_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:padding="@dimen/_5sdp"
                    android:text="Hello "
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_24ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="4dp"
                    android:padding="@dimen/_5sdp"
                    android:text="Riyadh ( 15 -Jasmine neighbo..."
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_text_view" />

                <ImageView
                    android:id="@+id/location_image"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/location_image"
                    app:layout_constraintBottom_toBottomOf="@+id/location_text_view"
                    app:layout_constraintStart_toEndOf="@+id/location_text_view"
                    app:layout_constraintTop_toTopOf="@+id/location_text_view" />


                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="@dimen/_210sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="29dp"
                    android:background="@drawable/search_edit_text"
                    android:elevation="@dimen/_10sdp"
                    android:hint="@string/search_for_fav_food"
                    android:inputType="text"
                    android:maxLength="14"
                    android:paddingStart="8dp"
                    app:boxBackgroundMode="none"
                    app:hintTextColor="@color/hint_text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_text_view" />


                <ImageView
                    android:id="@+id/search_image_view"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/search_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
                    app:layout_constraintStart_toEndOf="@+id/search_edit_text"
                    app:layout_constraintTop_toTopOf="@+id/search_edit_text" />


                <ImageView
                    android:id="@+id/filter_image_view"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/filter_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/search_image_view"
                    app:layout_constraintTop_toTopOf="@+id/search_edit_text" />


                <TextView
                    android:id="@+id/categories_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/categories"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />


                <TextView
                    android:id="@+id/categories_view_all_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/view_all"
                    android:textColor="@color/gold_text_color"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categories_text_view" />


                <TextView
                    android:id="@+id/popular_now_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/popular_now"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toStartOf="@+id/categories_recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/categories_recycler_view" />


                <TextView
                    android:id="@+id/popular_view_all_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/view_all"
                    android:textColor="@color/gold_text_color"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categories_recycler_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_now_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popular_now_text_view" />


                <TextView
                    android:id="@+id/Trending_now_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/trending_now"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toStartOf="@+id/popular_now_recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/popular_now_recycler_view" />

                <TextView
                    android:id="@+id/trending_view_all_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/view_all"
                    android:textColor="@color/gold_text_color"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popular_now_recycler_view" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trending_now_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Trending_now_text_view" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>